# rent_app

./: .gitignore  CLAUDE.md  README.md  goals.md  lab_notebook.md  pyproject.toml  pyrightconfig.json
database/: database.db  ddl.sql  test_data.sql
docs/: AWS_docs_table.html  git-worktrees guide.md  lambda_function_url_event_structure.jsonc
lambda/: app.py  database.db  get_rents.sql
lambda/templates/: index.jinja
src/rent_app/: app.py  get_rents.sql
src/rent_app/templates/: Session.vim  admin.jinja  admin_leases.jinja  admin_rents.jinja  admin_tenants.jinja  admin_units.jinja  index.jinja  stylesheet.css
terraform/: .terraform.lock.hcl  main.tf
tests/: conftest.py  test_get.py  test_post.py
